<resources>
    <string name="app_name">Restro</string>
    <!-- Strings related to login -->
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="Already_Have_An_Account">Already have an account? <font color="#E63996F3">Login</font></string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Enter_Email_Id">Enter your Email-id</string>
    <string name="Mobile_Hint">Mobile Number</string>
    <string name="Hint_Name">User Name</string>
    <string name="Password_Hint">Password</string>
    <string name="Confirm_Password_Hint">Confirm Password</string>
    <string name="Full_Name_Hint">Full Name</string>
    <string name="Email_Id_Hint">Email ID</string>
    <string name="Login_Button">Login</string>
    <string name="Signup_Link">No Account Yet? Create one</string>
    <string name="Signup_Button">Create Account</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Continue_Button">Continue</string>
    <string name="Dont_Have_An_Account">Don\'t have an account? <font color="#E63996F3">Register Now</font></string>
    <string name="Register_Header">Create a new Account</string>
    <string name="Register_Subheader">Please fill all the fields mentioned below</string>
    <string name="Login_Header">Welcome to Dezigna</string>
    <string name="Login_Subheader">Login to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>