<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@drawable/login_bk"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center">

        <!--        Create a new Account-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Register"
            style="@style/loginHeader"
            android:textColor="@color/dish_name"
            android:textStyle="bold"/>

        <!--        Please fill all the fields mentioned below-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Register_Subheader"
            android:textColor="#78909C"
            android:textSize="14sp" />

        <!--        Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="3dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:errorIconDrawable="@null">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dish_name"
                android:hint="@string/Hint_Name"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dish_name"
                android:hint="@string/Email_Id_Hint"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Number-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dish_name"
                android:hint="Phone No."
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dish_name"
                android:hint="@string/Password_Hint"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword"
            android:layout_marginTop="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dish_name"
                android:hint="@string/Confirm_Password_Hint"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Sign Up-->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:elevation="10dp"
            android:text="@string/Signup_Button"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <!--        Already have an account? Login-->
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/dish_name"
            android:text="@string/Already_Have_An_Account"
            android:textSize="14sp" />

        <!--        Progress bar Loader-->
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/black"
            tools:ignore="MissingClass" />



    </LinearLayout>


</ScrollView>

